--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
     "viem": "^2.13.3"
   },
